Bug 1436190: Fixed render frame notification in wake_up(). r=nical

MozReview-Commit-ID: JHBKpAh4YDD